--- a/style.css
+++ b/style.css
@@ -15,26 +15,56 @@ h1 {
     color: #fff;
 }
 
-input {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    margin: auto;  
+.container {
+  display: flex;
+  flex-direction: row;
 }
 
-button {
-    padding: 10px 20px;
-    border: 0;
-    background-color: #1606f7;
-    color: #fff;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
+.sidebar {
+  width: 400px;
+  background-color: #f0f0f0;
+  padding: 20px;
 }
 
-button:hover {
-    background-color: #13bdf1;
+.content {
+  flex: 1;
+  padding: 20px;
+}
+
+#search-container {
+  margin-bottom: 20px;
+}
+
+#city-input {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  margin-right: 10px;
+}
+
+#search-button {
+  padding: 10px 20px;
+  border: 0;
+  background-color: #3211eb;
+  color: #fff;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+#search-button:hover {
+  background-color: #444;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  margin-bottom: 10px;
 }
 
 #search-container {
